--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -93,9 +93,9 @@ body {
     font-size: 14px;
     transition: 0.5s;
   }
-  &:hover img {
-    transform: scale(1.3);
-  }
+  // &:hover img {
+  //   transform: scale(1.3);
+  // }
 }
 
 .rectangle {
